syntax = "proto3";
package opennms.sink.heartbeat;

option java_multiple_files = true;
option java_package = "org.opennms.horizon.grpc.heartbeat.contract";

import "google/protobuf/timestamp.proto";
import "opennms_minion_ipc.proto";

message HeartbeatMessage {
  minion.Identity identity = 1;
  google.protobuf.Timestamp timestamp = 2;
}
